@@ -15,6 +15,8 @@ F column: Function first seen in version, possibly with different API.
 
 RMV	MinVer	FirstA	Name
 ----------------------------------------------------------------------
+3.9	3.9	3.9	HXio_fullread
+3.9	3.9	3.9	HXio_fullwrite
 3.7	3.7	3.7	xml_newtextnode
 3.7	3.7	3.7	HXlist_for_each_rev_safe
 3.7	3.7	3.7	HXlist_for_each_rev
@@ -302,6 +304,7 @@ Header reference
 
 MinVer	Name
 -------------------------------------------
+3.9	libHX/io.h
 3.4	libHX/init.h
 3.0	libHX/map.h
 2.6	libHX/wx_helper.hpp
